--- a/FilterMissingData.ipynb
+++ b/FilterMissingData.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "a51be1ce",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "57195683",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "3  <NA>  NaN  <NA>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,8 +138,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d9c01eea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0    1  2\n",
+      "0  1  0.0  2\n",
+      "1  2  3.0  5\n",
+      "2  0  4.0  6\n",
+      "3  0  0.0  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FILL IN ALL MISSING DATA USING THE FILLNA FUNCTION\n",
+    "\n",
+    "print(df_data.fillna(0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b78ba94a",
    "metadata": {},
    "outputs": [
     {
@@ -171,41 +195,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.380792</td>\n",
+       "      <td>1.360513</td>\n",
+       "      <td>1.463064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1.776550</td>\n",
+       "      <td>0.345234</td>\n",
+       "      <td>-0.258062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>-1.756768</td>\n",
+       "      <td>0.465043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.775325</td>\n",
+       "      <td>0.481330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.081512</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.451288</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     0    1  2\n",
-       "0    1  NaN  2\n",
-       "1    2  3.0  5\n",
-       "2  NaN  4.0  6"
+       "          0         1         2\n",
+       "0  1.380792  1.360513  1.463064\n",
+       "1  1.776550  0.345234 -0.258062\n",
+       "2       NaN -1.756768  0.465043\n",
+       "3       NaN -1.775325  0.481330\n",
+       "4       NaN  0.081512       NaN\n",
+       "5       NaN -0.451288       NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_data.dropna(axis = 'rows', how='all')\n",
-    "\n"
+    "dirty_df = pd.DataFrame(np.random.standard_normal((6,3)))\n",
+    "dirty_df.iloc[2:, 0] = np.nan\n",
+    "dirty_df.iloc[4:, 2] = np.nan\n",
+    "\n",
+    "dirty_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "39b3949f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0         1         2\n",
+      "0  1.380792  1.360513  1.463064\n",
+      "1  1.776550  0.345234 -0.258062\n",
+      "2  1.776550 -1.756768  0.465043\n",
+      "3  1.776550 -1.775325  0.481330\n",
+      "4  1.776550  0.081512  0.481330\n",
+      "5  1.776550 -0.451288  0.481330\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_302141/1874551166.py:3: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  print(dirty_df.fillna(method=\"ffill\"))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FILL IN ALL MISSING DATA USING THE FILL FUNCTION WITH \"ffill\"\n",
+    "\n",
+    "print(dirty_df.fillna(method=\"ffill\"))"
    ]
   }
  ],
