More Data Transformation

--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "b90e6353",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "6  two   4"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "8b0a4748",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "52d89322",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "5  two   4"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "83568d2c",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "6  two   4   6"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "4a0d1d4c",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "ae3de704",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "8cbd3b4a",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "5  two   4   5"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "292e3023",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "7     pulled pork     9.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "id": "f465f9ae",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "7     pulled pork     9.0          9"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,12 +675,482 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "25dba67e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>food</th>\n",
+       "      <th>ounces</th>\n",
+       "      <th>tastiness</th>\n",
+       "      <th>animal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pork</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pastram</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tomato</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>veggie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mushroom</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>veggie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>hamburger</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>beef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>corn beef hash</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>beef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>pulled pork</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>pork</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             food  ounces  tastiness  animal\n",
+       "0           bacon     4.0         10     pig\n",
+       "1            pork     3.0          7     pig\n",
+       "2         pastram     5.0          3     pig\n",
+       "3          tomato    10.0          5  veggie\n",
+       "4        mushroom     6.0          4  veggie\n",
+       "5       hamburger     7.5          5    beef\n",
+       "6  corn beef hash     8.0          6    beef\n",
+       "7     pulled pork     9.0          9    pork"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "meat_to_animal = {\"bacon\": \"pig\", \"pork\": \"pig\", \"pastram\": \"pig\", \"tomato\": \"veggie\", \"mushroom\": \"veggie\", \"hamburger\": \"beef\", \"corn beef hash\": \"beef\", \"pulled pork\": \"pork\"}"
+    "#MAPPING A DICTIONARY\n",
+    "\n",
+    "meat_to_animal = {\"bacon\": \"pig\", \"pork\": \"pig\", \"pastram\": \"pig\", \"tomato\": \"veggie\", \"mushroom\": \"veggie\", \"hamburger\": \"beef\", \"corn beef hash\": \"beef\", \"pulled pork\": \"pork\"}\n",
+    "\n",
+    "df_food[\"animal\"]  = df_food[\"food\"].map(meat_to_animal)\n",
+    "\n",
+    "df_food"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "72565e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>food</th>\n",
+       "      <th>ounces</th>\n",
+       "      <th>animal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pork</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pastram</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tomato</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>veggie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mushroom</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>veggie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>hamburger</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>beef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>corn beef hash</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>beef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>pulled pork</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>pork</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             food  ounces  animal\n",
+       "0           bacon     4.0     pig\n",
+       "1            pork     3.0     pig\n",
+       "2         pastram     5.0     pig\n",
+       "3          tomato    10.0  veggie\n",
+       "4        mushroom     6.0  veggie\n",
+       "5       hamburger     7.5    beef\n",
+       "6  corn beef hash     8.0    beef\n",
+       "7     pulled pork     9.0    pork"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# MAPPING A DICTIONARY USING A FUNCTION\n",
+    "\n",
+    "df_food_revised = pd.DataFrame({\"food\" : [\"bacon\", \"pork\", \"pastram\", \"tomato\", \"mushroom\", \"hamburger\", \"corn beef hash\", \"pulled pork\"],\n",
+    "                           \"ounces\" : [4, 3,5, 10, 6, 7.5, 8, 9]})\n",
+    "\n",
+    "meat_to_animal_revised = {\"bacon\": \"pig\", \"pork\": \"pig\", \"pastram\": \"pig\", \"tomato\": \"veggie\", \"mushroom\": \"veggie\", \"hamburger\": \"beef\", \"corn beef hash\": \"beef\", \"pulled pork\": \"pork\"}\n",
+    "\n",
+    "\n",
+    "# def get_animal(meat):\n",
+    "#     return meat_to_animal_revised[meat]\n",
+    "\n",
+    "temp_animal = df_food_revised[\"food\"].map(lambda meat: meat_to_animal_revised[meat])\n",
+    "\n",
+    "df_food_revised[\"animal\"] =temp_animal \n",
+    "\n",
+    "df_food_revised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b586930e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       1.000\n",
+      "1       0.999\n",
+      "2       2.000\n",
+      "3       0.999\n",
+      "4   -1000.000\n",
+      "5       3.000\n",
+      "dtype: float64\n",
+      "0         1.0\n",
+      "1    not cool\n",
+      "2         2.0\n",
+      "3    not cool\n",
+      "4     -1000.0\n",
+      "5         3.0\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# REPLACING VALUES\n",
+    "\n",
+    "replaced_data = pd.Series([1., .999 , 2., .999, -1000, 3.])\n",
+    "\n",
+    "\n",
+    "print(replaced_data)\n",
+    "\n",
+    "replaced_data.replace(.999, \"not cool\", inplace=True)\n",
+    "\n",
+    "print(replaced_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76270573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       1.000\n",
+      "1       0.999\n",
+      "2       2.000\n",
+      "3       0.999\n",
+      "4   -1000.000\n",
+      "5       3.000\n",
+      "dtype: float64\n",
+      "0         1.0\n",
+      "1    not cool\n",
+      "2         2.0\n",
+      "3    not cool\n",
+      "4     -1000.0\n",
+      "5        cool\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#REPLACING VALUES USING A DICTIONARY\n",
+    "\n",
+    "replaced_data = pd.Series([1., .999 , 2., .999, -1000, 3.])\n",
+    "\n",
+    "print(replaced_data)\n",
+    "\n",
+    "replaced_data.replace({.999: \"not cool\", 3: \"cool\"}, inplace=True)\n",
+    "\n",
+    "#print(replaced_data)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "319e7249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "      <th>three</th>\n",
+       "      <th>four</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ohio</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Colorado</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New York</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          one  two  three  four\n",
+       "Ohio        0    1      2     3\n",
+       "Colorado    4    5      6     7\n",
+       "New York    8    9     10    11"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#RENAMING AXIS INDEX AND COLUMNS\n",
+    "rename_axis = pd.DataFrame(np.arange(12).reshape(3,4),index = ['Ohio', 'Colorado', 'New York'], columns = ['one', 'two', 'three', 'four'])\n",
+    "\n",
+    "rename_axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "fda102da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ONE</th>\n",
+       "      <th>TWO</th>\n",
+       "      <th>THRE</th>\n",
+       "      <th>FOUR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OHIO</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COLO</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEW</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ONE  TWO  THRE  FOUR\n",
+       "OHIO    0    1     2     3\n",
+       "COLO    4    5     6     7\n",
+       "NEW     8    9    10    11"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def transforer(x):\n",
+    "    return x[:4].upper()\n",
+    "\n",
+    "# rename_axis.index = rename_axis.index.map(transforer)\n",
+    "rename_axis.columns = rename_axis.columns.map(transforer)\n",
+    "\n",
+    "rename_axis"
    ]
   }
  ],
