--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "b90e6353",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "6  two   4"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "8b0a4748",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "52d89322",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "5  two   4"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "83568d2c",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "6  two   4   6"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "4a0d1d4c",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "ae3de704",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "8cbd3b4a",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "5  two   4   5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "292e3023",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "7     pulled pork     9.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "f465f9ae",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "7     pulled pork     9.0          9"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "25dba67e",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "7     pulled pork     9.0          9    pork"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "72565e56",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
        "7     pulled pork     9.0    pork"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "b586930e",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "76270573",
    "metadata": {},
    "outputs": [
@@ -971,14 +971,7 @@
       "3       0.999\n",
       "4   -1000.000\n",
       "5       3.000\n",
-      "dtype: float64\n",
-      "0         1.0\n",
-      "1    not cool\n",
-      "2         2.0\n",
-      "3    not cool\n",
-      "4     -1000.0\n",
-      "5        cool\n",
-      "dtype: object\n"
+      "dtype: float64\n"
      ]
     }
    ],
@@ -996,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "319e7249",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1053,7 @@
        "New York    8    9     10    11"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "fda102da",
    "metadata": {},
    "outputs": [
@@ -1107,21 +1100,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>OHIO</th>\n",
+       "      <th>Ohio</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>COLO</th>\n",
+       "      <th>Colorado</th>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NEW</th>\n",
+       "      <th>New York</th>\n",
        "      <td>8</td>\n",
        "      <td>9</td>\n",
        "      <td>10</td>\n",
@@ -1132,13 +1125,13 @@
        "</div>"
       ],
       "text/plain": [
-       "      ONE  TWO  THRE  FOUR\n",
-       "OHIO    0    1     2     3\n",
-       "COLO    4    5     6     7\n",
-       "NEW     8    9    10    11"
+       "          ONE  TWO  THRE  FOUR\n",
+       "Ohio        0    1     2     3\n",
+       "Colorado    4    5     6     7\n",
+       "New York    8    9    10    11"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,6 +1144,51 @@
     "rename_axis.columns = rename_axis.columns.map(transforer)\n",
     "\n",
     "rename_axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8025aa55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18, 30]    2\n",
+       "(30, 40]    0\n",
+       "(40, 50]    0\n",
+       "(50, 80]    1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#DATA DICRETIZATIN AND BINNING\n",
+    "\n",
+    "# ages = [20, 22, 25, 27, 21, 23, 37, 31, 61, 45, 41, 32]\n",
+    "ages = [1, 21, 21, 51]\n",
+    "bins  = [18, 30, 40, 50, 80]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#THE RETURN VALUE HERE IS CALLED A CATEGORY! DIFFERENT THAN WHAT \n",
+    "#WE HAVE USED UNTIL NOW\n",
+    "age_categories = pd.cut(ages, bins)\n",
+    "\n",
+    "\n",
+    "\n",
+    "age_categories.value_counts()\n",
+    "# pd.value_counts(age_categories)\n",
+    "\n",
+    "# age_categories.codes\n",
+    "\n",
+    "\n"
    ]
   }
  ],
