more data cleaning

--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "b90e6353",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "6  two   4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "8b0a4748",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "52d89322",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "5  two   4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "83568d2c",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "6  two   4   6"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "4a0d1d4c",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "ae3de704",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "8cbd3b4a",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "5  two   4   5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "292e3023",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "7     pulled pork     9.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "f465f9ae",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "7     pulled pork     9.0          9"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "25dba67e",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "7     pulled pork     9.0          9    pork"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "72565e56",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
        "7     pulled pork     9.0    pork"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "b586930e",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "76270573",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "319e7249",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "New York    8    9     10    11"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "fda102da",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
        "New York    8    9    10    11"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "8025aa55",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
     "\n",
     "#THE RETURN VALUE HERE IS CALLED A CATEGORY! DIFFERENT THAN WHAT \n",
     "#WE HAVE USED UNTIL NOW\n",
-    "age_categories = pd.cut(ages, bins)\n",
+    "age_categories = pd.cut(ages, bins, precision=2)\n",
     "\n",
     "\n",
     "\n",
@@ -1189,6 +1189,237 @@
     "# age_categories.codes\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "809a788c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.9699999999999998, -0.77]    250\n",
+       "(-0.77, -0.057]                 250\n",
+       "(-0.057, 0.61]                  250\n",
+       "(0.61, 2.98]                    250\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#SPLIT THE DATA INTO QUARTERS\n",
+    "\n",
+    "data = np.random.standard_normal((1000))\n",
+    "\n",
+    "quartiles = pd.qcut(data, 4, precision=2)\n",
+    "\n",
+    "quartiles.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "01e700d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 0            1            2            3\n",
+      "count  1000.000000  1000.000000  1000.000000  1000.000000\n",
+      "mean      0.049177    -0.027558     0.000279     0.063475\n",
+      "std       0.996632     0.974561     0.966617     1.010260\n",
+      "min      -3.071231    -3.004185    -3.779069    -2.757012\n",
+      "25%      -0.597164    -0.694492    -0.645355    -0.640097\n",
+      "50%       0.053398    -0.051827    -0.005222     0.064387\n",
+      "75%       0.738897     0.613618     0.623739     0.711396\n",
+      "max       2.722123     3.336181     3.180116     3.794594\n",
+      "333    3.137531\n",
+      "360   -3.041738\n",
+      "743    3.180116\n",
+      "746   -3.779069\n",
+      "Name: 2, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#OUTLIERS\n",
+    "\n",
+    "data_revised = pd.DataFrame(np.random.standard_normal((1000, 4)))\n",
+    "\n",
+    "print(data_revised.describe())\n",
+    "\n",
+    "\n",
+    "col = data_revised[2]\n",
+    "\n",
+    "print(col[col.abs() > 3])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "72139fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>0.327098</td>\n",
+       "      <td>-0.514353</td>\n",
+       "      <td>0.664238</td>\n",
+       "      <td>3.794594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>-0.667493</td>\n",
+       "      <td>3.204264</td>\n",
+       "      <td>-1.153757</td>\n",
+       "      <td>-1.646057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>1.746588</td>\n",
+       "      <td>-0.024185</td>\n",
+       "      <td>-0.061824</td>\n",
+       "      <td>3.111273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>0.332275</td>\n",
+       "      <td>-1.243260</td>\n",
+       "      <td>3.137531</td>\n",
+       "      <td>0.364895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>-0.498491</td>\n",
+       "      <td>-0.208109</td>\n",
+       "      <td>-3.041738</td>\n",
+       "      <td>-0.233863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>-0.347888</td>\n",
+       "      <td>-1.286204</td>\n",
+       "      <td>0.393735</td>\n",
+       "      <td>3.531850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>-0.017632</td>\n",
+       "      <td>-3.004185</td>\n",
+       "      <td>-0.276865</td>\n",
+       "      <td>-0.150118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>-0.017615</td>\n",
+       "      <td>0.603562</td>\n",
+       "      <td>3.180116</td>\n",
+       "      <td>-0.744630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>746</th>\n",
+       "      <td>2.493501</td>\n",
+       "      <td>-0.630036</td>\n",
+       "      <td>-3.779069</td>\n",
+       "      <td>0.219802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>-1.096912</td>\n",
+       "      <td>3.230697</td>\n",
+       "      <td>0.861535</td>\n",
+       "      <td>-0.305723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>859</th>\n",
+       "      <td>-0.703307</td>\n",
+       "      <td>3.336181</td>\n",
+       "      <td>0.365890</td>\n",
+       "      <td>-0.020602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>933</th>\n",
+       "      <td>-0.083904</td>\n",
+       "      <td>-0.727028</td>\n",
+       "      <td>-1.072248</td>\n",
+       "      <td>3.425251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>951</th>\n",
+       "      <td>-3.071231</td>\n",
+       "      <td>0.682712</td>\n",
+       "      <td>-0.535157</td>\n",
+       "      <td>-0.488071</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0         1         2         3\n",
+       "44   0.327098 -0.514353  0.664238  3.794594\n",
+       "99  -0.667493  3.204264 -1.153757 -1.646057\n",
+       "106  1.746588 -0.024185 -0.061824  3.111273\n",
+       "333  0.332275 -1.243260  3.137531  0.364895\n",
+       "360 -0.498491 -0.208109 -3.041738 -0.233863\n",
+       "548 -0.347888 -1.286204  0.393735  3.531850\n",
+       "620 -0.017632 -3.004185 -0.276865 -0.150118\n",
+       "743 -0.017615  0.603562  3.180116 -0.744630\n",
+       "746  2.493501 -0.630036 -3.779069  0.219802\n",
+       "798 -1.096912  3.230697  0.861535 -0.305723\n",
+       "859 -0.703307  3.336181  0.365890 -0.020602\n",
+       "933 -0.083904 -0.727028 -1.072248  3.425251\n",
+       "951 -3.071231  0.682712 -0.535157 -0.488071"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#MORE OUTLIERS FOR A DATAFRAME\n",
+    "\n",
+    "data_revised[(data_revised.abs() > 3).any(axis=\"columns\")]"
    ]
   }
  ],
